add get jwt doc to swagger
